# pamtester

./: AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool
doc/: Makefile  Makefile.am  Makefile.in  pamtester.1  pamtester.1.in
src/: Makefile  Makefile.am  Makefile.in  app.c  app.h  compat.c  compat.h  expr_parser.c  expr_parser.h  pamtester  pamtester.c  parse_opts.c  parse_opts.h  util.c  util.h
